--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "mem": "^6.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "set-value": "^3.0.1"
   }
 }
